--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
 <body>
 
-  <!-- Sidebar Header -->
-  <header id="header">
-    <div class="profile-img">
-      <img src="img/fash-profile.jpg" alt="Profile">
-    </div>
+  <!-- Header -->
+ <header id="header">
+  <div class="logo">
     <h1 class="sitename">My Portfolio</h1>
+  </div>
 
     <!-- Social Links -->
        <div class="social-links text-center">
@@ -25,16 +24,16 @@
       <a href="https://www.linkedin.com/in/afolabi-owolabi-b1021b269" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
-    <nav id="navmenu">
-      <ul>
-        <li><a href="#hero" class="active"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
-        <li><a href="#skills"><i class="fas fa-code"></i> Skills</a></li>
-        <li><a href="#portfolio"><i class="fas fa-briefcase"></i> Portfolio</a></li>
-        <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+     <nav id="navmenu">
+    <ul>
+      <li><a href="#hero" class="active"><i class="home"></i> Home</a></li>
+      <li><a href="#about"><i class="about me"></i> About</a></li>
+      <li><a href="#skills"><i class="skills"></i> Skills</a></li>
+      <li><a href="#portfolio"><i class="my works"></i> Portfolio</a></li>
+      <li><a href="#contact"><i class="reach me"></i> Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
   <!-- Hero Section -->
   <section id="hero" class="hero">
@@ -123,16 +122,16 @@
     <div class="contact-container">
       <div class="contact-info">
         <div class="contact-item">
-          <i class="fas fa-map-marker-alt"></i>
+          <i class="location"></i>
           <p>Lagos, Nigeria</p>
         </div>
         <div class="contact-item">
-          <i class="fas fa-envelope"></i>
-          <p>john@example.com</p>
+          <i class="email"></i>
+          <p>owolabidavid24@mail.com</p>
         </div>
         <div class="contact-item">
-          <i class="fas fa-phone"></i>
-          <p>+234 810 000 0000</p>
+          <i class="phone number"></i>
+          <p>+234 906 871 0464</p>
         </div>
       </div>
 
