--- a/index.html
+++ b/index.html
@@ -1,148 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">-
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <link rel="stylesheet" href="main.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Raleway:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
 </head>
 <body>
 
   <!-- Header -->
- <header id="header">
-  <div class="logo">
-    <h1 class="sitename">My Portfolio</h1>
-  </div>
+  <header class="header">
+    <div class="header__brand">
+      <h1 class="header__logo">My Portfolio</h1>
+    </div>
 
     <!-- Social Links -->
-       <div class="social-links text-center">
-      <a href="https://x.com/fash_afolabi" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="https://m.facebook.com/david.owolabi.5496/" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="https://www.instagram.com/fash_the_designer/" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/afolabi-owolabi-b1021b269" class="linkedin"><i class="bi bi-linkedin"></i></a>
-    </div>
+    <aside class="header__social">
+      <a href="https://x.com/fash_afolabi" class="header__social-link">X</a>
+      <a href="https://m.facebook.com/david.owolabi.5496/" class="header__social-link">Facebook</a>
+      <a href="https://www.instagram.com/fash_the_designer/" class="header__social-link">Instagram</a>
+      <a href="https://www.linkedin.com/in/afolabi-owolabi-b1021b269" class="header__social-link">LinkedIn</a>
+    </aside>
 
-     <nav id="navmenu">
-    <ul>
-      <li><a href="#hero" class="active"><i class="home"></i> Home</a></li>
-      <li><a href="#about"><i class="about me"></i> About</a></li>
-      <li><a href="#skills"><i class="skills"></i> Skills</a></li>
-      <li><a href="#portfolio"><i class="my works"></i> Portfolio</a></li>
-      <li><a href="#contact"><i class="reach me"></i> Contact</a></li>
-    </ul>
-  </nav>
-</header>
+    <!-- Navigation -->
+    <nav class="nav">
+      <ul class="nav__list">
+        <li><a href="#hero" class="nav__link nav__link--active">Home</a></li>
+        <li><a href="#about" class="nav__link">About</a></li>
+        <li><a href="#skills" class="nav__link">Skills</a></li>
+        <li><a href="#portfolio" class="nav__link">Portfolio</a></li>
+        <li><a href="#contact" class="nav__link">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <!-- Hero Section -->
-  <section id="hero" class="hero">
-    <div class="hero-container">
-      <h1>Hi, I'm Owolabi Afolabi</h1>
-      <p>I’m a <span class="typed-text">Graphic Designer & Frontend Enthusiast</span><span class="cursor"></span></p>
-    </div>
-  </section>
+  <!-- Main -->
+  <main class="main">
 
-  <!-- About Section -->
-  <section id="about" class="about">
-    <div class="section-title">
-      <h2>About Me</h2>
-      <p>A passionate designer who loves turning ideas into reality through creativity and clean designs.</p>
-    </div>
-
-    <div class="about-content">
-      <div class="about-img">
-        <img src="img/fash-profile.jpg" alt="About Me">
+    <!-- Hero Section -->
+    <section id="hero" class="hero">
+      <div class="hero__container">
+        <h1 class="hero__title">Hi, I'm Owolabi Afolabi</h1>
+        <p class="hero__subtitle">
+          I’m a <span class="hero__typed">Graphic Designer & Frontend Enthusiast</span>
+        </p>
       </div>
-      <div class="about-text">
-        <h3>Graphic Designer & Frontend Enthusiast</h3>
-        <p>I specialize in creating modern, minimal, and user-friendly designs. Currently expanding my skills into frontend development to bring my designs to life.</p>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+      <div class="section-title">
+        <h2 class="section-title__heading">About Me</h2>
+        <p class="section-title__text">A passionate designer who loves turning ideas into reality through creativity and clean designs.</p>
       </div>
-    </div>
-  </section>
 
-  <!-- Skills Section -->
-  <section id="skills" class="skills">
-    <div class="section-title">
-      <h2>My Skills</h2>
-    </div>
-
-    <div class="skills-content">
-      <div class="skills-left">
-        <div class="skill">
-          <p>Photoshop</p>
-          <div class="progress"><div class="progress-bar" style="width: 90%;">90%</div></div>
+      <div class="about__content">
+        <div class="about__image">
+          <img src="img/fash-profile.jpg" alt="About Me">
         </div>
-        <div class="skill">
-          <p>Illustrator</p>
-          <div class="progress"><div class="progress-bar" style="width: 85%;">85%</div></div>
-        </div>
-        <div class="skill">
-          <p>Figma</p>
-          <div class="progress"><div class="progress-bar" style="width: 80%;">80%</div></div>
+        <div class="about__text">
+          <h3 class="about__subtitle">Graphic Designer & Frontend Enthusiast</h3>
+          <p>I specialize in creating modern, minimal, and user-friendly designs. Currently expanding my skills into frontend development to bring my designs to life.</p>
         </div>
       </div>
+    </section>
 
-      <div class="skills-right">
-        <span class="tag">UI/UX</span>
-        <span class="tag">Branding</span>
-        <span class="tag">Logo Design</span>
-        <span class="tag">Web Design</span>
+    <!-- Skills Section -->
+    <section id="skills" class="skills">
+      <div class="section-title">
+        <h2 class="section-title__heading">My Skills</h2>
       </div>
-    </div>
-  </section>
 
-  <!-- Portfolio Section -->
-  <section id="portfolio" class="portfolio">
-    <div class="section-title">
-      <h2>Portfolio</h2>
-    </div>
-    <div class="portfolio-container">
-      <div class="portfolio-item">
-        <img src="img/gallery/gallery-1.jpg" alt="Project 1">
-        <div class="portfolio-info">Project 1 - Branding</div>
-      </div>
-      <div class="portfolio-item">
-        <img src="img/gallery/gallery-9-2.png" alt="Project 2">
-        <div class="portfolio-info">Project 2 - UI/UX</div>
-      </div>
-      <div class="portfolio-item">
-        <img src="img/gallery/gallery-9-3.jpg" alt="Project 3">
-        <div class="portfolio-info">Project 3 - Logo Design</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="contact">
-    <div class="section-title">
-      <h2>Contact Me</h2>
-    </div>
-
-    <div class="contact-container">
-      <div class="contact-info">
-        <div class="contact-item">
-          <i class="location"></i>
-          <p>Lagos, Nigeria</p>
+      <div class="skills__content">
+        <div class="skills__left">
+          <div class="skills__item">
+            <p class="skills__name">Photoshop</p>
+            <div class="skills__progress">
+              <div class="skills__bar skills__bar--90">90%</div>
+            </div>
+          </div>
+          <div class="skills__item">
+            <p class="skills__name">Illustrator</p>
+            <div class="skills__progress">
+              <div class="skills__bar skills__bar--85">85%</div>
+            </div>
+          </div>
+          <div class="skills__item">
+            <p class="skills__name">Figma</p>
+            <div class="skills__progress">
+              <div class="skills__bar skills__bar--80">80%</div>
+            </div>
+          </div>
         </div>
-        <div class="contact-item">
-          <i class="email"></i>
-          <p>owolabidavid24@mail.com</p>
-        </div>
-        <div class="contact-item">
-          <i class="phone number"></i>
-          <p>+234 906 871 0464</p>
+
+        <div class="skills__right">
+          <span class="skills__tag">UI/UX</span>
+          <span class="skills__tag">Branding</span>
+          <span class="skills__tag">Logo Design</span>
+          <span class="skills__tag">Web Design</span>
         </div>
       </div>
+    </section>
 
-      <form class="contact-form">
-        <input type="text" class="form-control" placeholder="Your Name" required>
-        <input type="email" class="form-control" placeholder="Your Email" required>
-        <textarea class="form-control" rows="5" placeholder="Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </div>
-  </section>
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio">
+      <div class="section-title">
+        <h2 class="section-title__heading">Portfolio</h2>
+      </div>
+      <div class="portfolio__grid">
+        <div class="portfolio__item">
+          <img src="img/gallery/gallery-1.jpg" alt="Project 1">
+          <div class="portfolio__info">Project 1 - Branding</div>
+        </div>
+        <div class="portfolio__item">
+          <img src="img/gallery/gallery-9-2.png" alt="Project 2">
+          <div class="portfolio__info">Project 2 - UI/UX</div>
+        </div>
+        <div class="portfolio__item">
+          <img src="img/gallery/gallery-9-3.jpg" alt="Project 3">
+          <div class="portfolio__info">Project 3 - Logo Design</div>
+        </div>
+      </div>
+    </section>
 
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+      <div class="section-title">
+        <h2 class="section-title__heading">Contact Me</h2>
+      </div>
+
+      <div class="contact__content">
+        <div class="contact__info">
+          <p class="contact__item">📍 Lagos, Nigeria</p>
+          <p class="contact__item">📧 owolabidavid24@mail.com</p>
+          <p class="contact__item">📞 +234 906 871 0464</p>
+        </div>
+
+        <form class="contact__form">
+          <input type="text" class="contact__input" placeholder="Your Name" required>
+          <input type="email" class="contact__input" placeholder="Your Email" required>
+          <textarea class="contact__input contact__textarea" rows="5" placeholder="Message" required></textarea>
+          <button type="submit" class="contact__button">Send Message</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p class="footer__text">© 2025 Owolabi Afolabi. All rights reserved.</p>
+  </footer>
 </body>
 </html>
